Footer: padding around icons on small screen to prevent them from touching the edge of the screen

--- a/components/Footer/style.module.less
+++ b/components/Footer/style.module.less
@@ -76,5 +76,6 @@
         order: 2;
         width: 100%;
         margin: 0;
+        padding: 0 1rem;
     }
 }
